--- a/css/styles.css
+++ b/css/styles.css
@@ -196,7 +196,7 @@ a[href="#"] {
   margin-left: auto;
 }
 
-.header__link {
+.navigation__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -209,11 +209,11 @@ a[href="#"] {
   margin-right: 10px;
 }
 
-.header__link {
+.navigation__link {
   fill: currentColor
 }
 
-.header__phone {
+.navigation__phone {
   width: 100%;
   height: 100%;
   display: flex;
@@ -232,12 +232,12 @@ a[href="#"] {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.header__phone:hover,
-.header__phone:focus {
+.navigation__phone:hover,
+.navigation__phone:focus {
   color: var(--accent-color);
 }
 
-.header__phone {
+.navigation__phone {
   fill: currentColor
 }
 
@@ -317,14 +317,14 @@ a[href="#"] {
 .features {
   display: flex;
 }
-.feature-icon {
+.features__icon {
   padding: 25px 100px;
   margin-bottom: 30px;
   background: var(--primary-button-color);
   border-radius: 4px;
 }
 
-.title {
+.features__title {
   margin-top: 0px;
   margin-bottom: 10px;
 
@@ -337,7 +337,7 @@ a[href="#"] {
   color: var(--title-text-color);
 }
 
-.text-main {
+.features__text {
   font-weight: 400;
   font-size: 14px;
   line-height: 1.7;
@@ -347,15 +347,15 @@ a[href="#"] {
   color: var(--primary-text-color)
 }
 
-.features .item {
+.features .features__item{
   flex-basis: calc((100% - 30px) / 4);
 }
 
-.features .item {
+.features .features__item {
   margin-left: 30px;
 }
 
-.features .item:first-child {
+.features .features__item:first-child {
   margin-left: 0px;
 }
 
