--- a/css/styles.css
+++ b/css/styles.css
@@ -425,16 +425,23 @@ a[href="#"] {
 }
 
 /*наша команда*/
-.our-team {
-  padding-top: 0px;
 
-}
-
-.team {
+.section-team {
   background-color: var(--primary-button-color)
 }
 
-.main-foto {
+.personal-foto {
+  display: flex;
+
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-left: 0px;
+}
+
+.personal-foto__img {
+  margin-bottom: 30px;
+}
+.personal-foto__item {
 
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -442,43 +449,31 @@ a[href="#"] {
   background-color: var(--primary-white-color);
 }
 
-.main-foto:nth-child(n+2) {
+.personal-foto__item:nth-child(n+2) {
   margin-left: 30px;
 }
-
-.main-page-foto {
-  display: flex;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
-
-.main-page-foto {
-  padding-left: 0px;
-}
-.foto {
-  margin-bottom: 30px;
-}
-.main-page-foto .main-foto {
+.personal-foto__item {
   width: calc((100% - 30px)/4)
 }
 
-.main-page-foto .social-icons {
+.personal-foto .social-icons {
   display: flex;
   justify-content: center;
   margin-bottom: 30px;
 }
-.main-page-foto .social-item {
+
+.personal-foto .social-item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
- 
+
 }
 
-.main-page-foto .social-item:last-child {
+.personal-foto .social-item:last-child {
   margin-right: 0px;
 }
 
-.main-page-foto .social-link {
+.personal-foto .social-link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -491,26 +486,22 @@ a[href="#"] {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
-.main-page-foto .social-link:hover,
-.main-page-foto .social-link:focus {
+
+.personal-foto.social-link:hover,
+.personal-foto .social-link:focus {
   background-color: var(--accent-color)
 }
 
-.main-page-foto .social-icon {
+.personal-foto .social-icon {
   fill: currentColor
 }
 
-.main-page-foto .social-link:hover,
-.main-page-foto .social-link:focus {
+.personal-foto.social-link:hover,
+.personal-foto .social-link:focus {
   color: var(--primary-white-color)
 }
 
-
-.main-title .what {
-  width: 264px;
-}
-
-.name-title {
+.text__name {
   margin-top: 0px;
   margin-bottom: 10px;
 
@@ -523,9 +514,9 @@ a[href="#"] {
   color: var(--title-text-color)
 }
 
-.text {
+.text__profession {
   margin-bottom: 16px;
-  
+
   font-weight: 400;
   font-size: 16px;
   line-height: 19px;
