--- a/css/styles.css
+++ b/css/styles.css
@@ -487,7 +487,7 @@ a[href="#"] {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.personal-foto.social-link:hover,
+.personal-foto .social-link:hover,
 .personal-foto .social-link:focus {
   background-color: var(--accent-color)
 }
@@ -496,12 +496,12 @@ a[href="#"] {
   fill: currentColor
 }
 
-.personal-foto.social-link:hover,
+.personal-foto .social-link:hover,
 .personal-foto .social-link:focus {
   color: var(--primary-white-color)
 }
 
-.text__name {
+.member__name {
   margin-top: 0px;
   margin-bottom: 10px;
 
@@ -514,7 +514,7 @@ a[href="#"] {
   color: var(--title-text-color)
 }
 
-.text__profession {
+.member__position {
   margin-bottom: 16px;
 
   font-weight: 400;
@@ -538,19 +538,19 @@ a[href="#"] {
 }
 
 
-.clients-list .client-item {
+.clients-list__item {
   width: 170px;
   height: 92px;
   margin-right: 30px;
 }
 
 
-.clients-list .client-item:last-child {
+.clients-list__item:last-child {
   margin-right: 0px;
 }
 
 
-.clients-list .client-link {
+.clients-list .clients-list__link {
   width: 100%;
   height: 100%;
   display: flex;
@@ -565,13 +565,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.clients-list .client-link:hover,
-.clients-list .client-link:focus {
+.clients-list__link:hover,
+.clients-list__link:focus {
   color: var(--accent-color);
   border-color: var(--accent-color)
 }
 
-.clients-list .client-icon {
+.clients-list__icon {
   fill: currentColor
 }
 
