--- a/css/styles.css
+++ b/css/styles.css
@@ -719,13 +719,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   background: #2F303A;
 }
 
-.footer-link-end {
+.footer-nav {
   padding: 0px;
   margin-left: 0px;
   margin-right: 0px;
 }
 
-.footer-addres {
+.footer-nav__addres {
   margin-bottom: 9px;
 
   font-family: 'Roboto';
@@ -738,7 +738,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-white-color)
 }
 
-.footer-link {
+.footer-nav__link {
   margin-bottom: 9px;
 
   font-family: 'Roboto';
@@ -750,7 +750,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-grey-color)
 }
 
-.footer-tel-link {
+.footer-nav__tel {
 
   font-family: 'Roboto';
   font-style: normal;
@@ -762,7 +762,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-grey-color)
 }
 
-.footer-title {
+.footer-icons__title {
   margin-top: 0px;
   margin-bottom: 20px;
 
@@ -775,25 +775,25 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-white-color);
 }
 
-.foter-conect {
+.footer-conect {
   display: flex;
 }
 
-.footer-end {
+.footer-icons {
   margin-left: 70px;
 }
 
-.social-icons-footer .social-item {
+.footer-icons__item {
   width: 44px;
   height: 44px;
   margin-right: 10px;
 }
 
-.social-icons-footer {
+.footer-icons__list {
   display: flex;
 }
 
-.social-icons-footer .social-link {
+.footer-icons__list .footer-icons__link {
   margin-right: 10px;
   width: 100%;
   height: 100%;
@@ -810,13 +810,13 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-icons-footer .social-link:hover,
-.social-icons-footer .social-link:focus {
+.footer-icons__link:hover,
+.footer-icons__link:focus {
   background-color: var(--accent-color);
 
 }
 
-.social-icons-footer .social-icon {
+.footer-icons__list .social-icon {
   fill: currentColor
 }
 
