--- a/css/styles.css
+++ b/css/styles.css
@@ -762,7 +762,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   color: var(--primary-grey-color)
 }
 
-.footer-icons__title {
+.footer-title {
   margin-top: 0px;
   margin-bottom: 20px;
 
@@ -850,7 +850,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   border-color: var(--accent-color);
 }
 
-.button-footer {
+.hero__button--footer {
   display: flex;
   margin-left: 12px;
 }
