--- a/css/styles.css
+++ b/css/styles.css
@@ -821,15 +821,15 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 }
 
 /*підпишіться на розсилку*/
-.footer-modal-form {
+.footer-form {
   margin-left: auto;
 }
 
-.footer-buttons {
+.footer-form__buttons {
   display: flex;
 }
 
-.footer-input {
+.footer-form__input {
   padding-left: 16px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -842,10 +842,10 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-input:hover {
+.footer-form__input:hover {
   border-color: var(--accent-color);
 }
-.footer-input:focus {
+.footer-form__input:focus {
   outline: 0;
   border-color: var(--accent-color);
 }
@@ -960,12 +960,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 
   color: var(--title-text-color)
 }
-.input-line {
+.modal-form__line {
   display: block;
   margin-bottom: 10px;
 }
 
-.modal-input {
+.modal-form__input {
   width: 100%;
   height: 40px;
   padding-left: 42px;
@@ -977,27 +977,27 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-input:hover {
+.modal-form__input:hover {
   border-color: var(--accent-color);
 }
-.modal-input:focus {
+.modal-form__input:focus {
   outline: 0;
   border-color: var(--accent-color);
 }
 
-.modal-input {
+.modal-form__input {
   fill: currentColor;
 }
 
-.input-wrapper {
+.modal-form__wrapper {
   position: relative;
 }
 
-.input-wrapper input {
+.modal-form__wrapper input {
   margin-bottom: 0;
 }
 
-.input-icon {
+.modal-form__icon {
   position: absolute;
   left: 12px;
   top: 50%;
@@ -1008,12 +1008,12 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-input:focus+.input-icon,
-.modal-input:hover+.input-icon {
+.modal-form__input:focus+.modal-form__icon,
+.modal-form__input:hover+.modal-form__icon {
   fill: var(--accent-color);
 }
 
-.modal-label {
+.modal-form__label {
   display: inline-block;
   width: 100%;
   margin-bottom: 4px;
@@ -1064,7 +1064,7 @@ border-color: var(--accent-color);
   justify-content: center;
 }
 
-.checkbox-agree .icon-wrapper {
+.checkbox-agree__icon-wrapper {
   width: 16px;
   height: 15px;
   border: 2px solid var(--title-text-color);
@@ -1075,16 +1075,17 @@ border-color: var(--accent-color);
   justify-content: center;
 }
 
-.checkbox-agree .agree-icon {
+.checkbox-agree {
   fill: transparent;
 }
 
-.check-line input:checked+.checkbox-agree .icon-wrapper {
+.check-line input:checked+.checkbox-agree 
+.checkbox-agree__icon-wrapper {
   background-color: var(--accent-color);
   border: none;
 }
 
-.check-line input:checked+.checkbox-agree .agree-icon {
+.check-line input:checked+.checkbox-agree {
   fill: var(--primary-white-color);
 }
 
