--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,1 +1,8 @@
 @import "./utils/variables";
+@import "./components/container";
+@import "./utils/visually-hidden";
+@import "./components/page-header";
+@import "./components/contacts";
+@import "./components/hero";
+@import "./components/button";
+
