--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -36,3 +36,15 @@ a {
     --end-color: rgba(47, 48, 58, 0.4);
 
 }
+
+body {
+    background-color: var(--primary-white-color);
+    color: var(--primary-text-color);
+    font-family: Roboto, sans-serif;
+}
+
+.img {
+    display: block;
+    width: 100%;
+    height: auto;
+}
