SASS (завантаження папок)

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -5,4 +5,19 @@
 @import "./components/contacts";
 @import "./components/hero";
 @import "./components/button";
+@import "./components/section-features";
+@import "./components/section-applications";
+@import "./components/section-team";
+@import "./components/clients";
+@import "./components/footer";
+@import "./components/contacts-form";
+@import "./components/modal-form";
+@import "./components/gallery"
+
+
+
+
+
+
+
 
