--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -27,3 +27,62 @@
     background-color: var(--active-blue);
 
 }
+/*footer-button*/
+
+.hero__button--footer {
+    display: flex;
+    margin-left: 12px;
+}
+
+.icon-send {
+    margin-left: 10px;
+    color: var(--primary-white-color);
+}
+
+.icon-send {
+    fill: currentColor;
+}
+/*button-form*/
+
+.button-form {
+    padding: 10px 52px;
+}
+/*portfolio-button*/
+
+.portf-button {
+    display: flex;
+    border: none;
+    justify-content: center;
+    margin: 0px;
+    padding: 0px;
+
+}
+
+.portfolio-button {
+    margin-left: 8px;
+    margin-bottom: 34px;
+    padding: 6px 25px;
+
+    font-family: inherit;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    letter-spacing: 0.03em;
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+
+    background-color: var(--primary-button-color);
+    color: var(--title-text-color);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
+}
+
+.portfolio-button:hover,
+.portfolio-button:focus {
+    background-color: var(--accent-color);
+    color: var(--primary-white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+        0px 1px 2px rgba(0, 0, 0, 0.08),
+        0px 2px 2px rgba(0, 0, 0, 0.12);
+}
