--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -22,11 +22,13 @@
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.hero__button:hover,
-.hero__button:focus {
-    background-color: var(--active-blue);
+ .hero__button {
 
-}
+     &:hover,
+     &:focus {
+         background-color: var(--active-blue);
+     }
+ }
 /*footer-button*/
 
 .hero__button--footer {
@@ -78,11 +80,15 @@
         box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
-.portfolio-button:hover,
-.portfolio-button:focus {
-    background-color: var(--accent-color);
-    color: var(--primary-white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
+.portfolio-button {
+
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
+        color: var(--primary-white-color);
+        box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
+            0px 1px 2px rgba(0, 0, 0, 0.08),
+            0px 2px 2px rgba(0, 0, 0, 0.12);
+
+    }
 }
