--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -17,18 +17,15 @@
     background-color: var(--accent-color);
     color: var(--primary-white-color);
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+    &:hover,
+    &:focus {
+            background-color: var(--active-blue);
+        }
 }
 
- .hero__button {
 
-     &:hover,
-     &:focus {
-         background-color: var(--active-blue);
-     }
- }
 /*footer-button*/
 
 .hero__button--footer {
@@ -38,11 +35,12 @@
 
 .icon-send {
     margin-left: 10px;
-    color: var(--primary-white-color);
-}
+    color: var(--primary-white-color)
 
-.icon-send {
-    fill: currentColor;
+    {
+        fill: currentColor
+
+    }
 }
 /*button-form*/
 
@@ -77,10 +75,8 @@
     background-color: var(--primary-button-color);
     color: var(--title-text-color);
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.portfolio-button {
 
     &:hover,
     &:focus {
