--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -1,24 +1,22 @@
 .clients-list {
     display: flex;
     align-items: center;
-    justify-content: center;
-}
 
-.clients-list {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    justify-content: center {
+        margin-top: 0px;
+        margin-bottom: 0px;
+    }
 }
-
 .clients-list__item {
     width: 170px;
     height: 92px;
     margin-right: 30px;
-}
 
-.clients-list__item:last-child {
-    margin-right: 0px;
-}
 
+    :last-child {
+        margin-right: 0px;
+    }
+}
 .clients-list .clients-list__link {
     width: 100%;
     height: 100%;
@@ -31,15 +29,14 @@
     color: var(--icons-grey-color);
 
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+        border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.clients-list__link:hover,
-.clients-list__link:focus {
-    color: var(--accent-color);
-    border-color: var(--accent-color)
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+        border-color: var(--accent-color);
+    }
 }
-
 .clients-list__icon {
     fill: currentColor
 }
