--- a/sass/components/_contacts-form.scss
+++ b/sass/components/_contacts-form.scss
@@ -15,16 +15,16 @@
     height: 50px;
     background-color: #2F303A;
 
-    transition-property: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   
+    &:hover {
+        border-color: var(--accent-color);
 
-.footer-form__input:hover {
-    border-color: var(--accent-color);
-}
+    }
 
-.footer-form__input:focus {
-    outline: 0;
-    border-color: var(--accent-color);
+    &:focus {
+        outline: 0;
+        border-color: var(--accent-color);
+    }
+
 }
