--- a/sass/components/_contacts.scss
+++ b/sass/components/_contacts.scss
@@ -5,31 +5,27 @@
     padding-top: 32px;
     padding-bottom: 32px;
 
-}
+    .navigation__item:not(:first-child) {
+        margin-left: 50px;
+    }
 
-.navigation__list .navigation__item:not(:first-child) {
-    margin-left: 50px;
-}
+    .navigation__link {
+        color: var(--title-text-color);
+    }
 
-.navigation__list .navigation__link {
-    color: var(--title-text-color);
 }
-
 .navigation__list {
     font-weight: 500;
     font-size: 14px;
     line-height: 1.1;
     letter-spacing: 0.02em;
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-}
+    transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.navigation__list:hover,
-.navigation__list:focus {
-    color: var(--accent-color);
-
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .link {
@@ -39,14 +35,12 @@
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-}
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.link:hover,
-.link:focus {
-    color: var(--accent-color)
+    &:hover,
+    &:focus {
+        color: var(--accent-color)
+    }
 }
 
 .navigation__list .navigation__link--current {
@@ -77,16 +71,12 @@ a[href="#"] {
 
 .navigation__contact {
     display: flex;
-}
-
-.navigation__contact .navigation__item {
-    margin-left: 50px;
-}
-
-.navigation__contact {
     margin-left: auto;
-}
 
+    .navigation__item {
+        margin-left: 50px;
+    }
+}
 .navigation__link {
     width: 100%;
     height: 100%;
@@ -95,14 +85,14 @@ a[href="#"] {
     justify-content: center;
     color: var(--primary-text-color);
 }
-
-.mail__icon {
-    margin-right: 10px;
-}
-
 .navigation__link {
-    fill: currentColor
+    fill: currentColor;
+
+    .mail__icon {
+        margin-right: 10px;
+    }
 }
+
 
 .navigation__phone {
     width: 100%;
@@ -118,20 +108,18 @@ a[href="#"] {
     letter-spacing: 0.02em;
     color: var(--primary-text-color);
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1)
-}
+    transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.navigation__phone:hover,
-.navigation__phone:focus {
-    color: var(--accent-color);
+    &:hover,
+    &:focus {
+        color: var(--accent-color);
+    }
 }
 
 .navigation__phone {
-    fill: currentColor
-}
+    fill: currentColor;
 
-.tel__icon {
-    margin-right: 10px;
+    .tel__icon {
+        margin-right: 10px;
+    }
 }
