--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -67,12 +67,12 @@
 
 .footer-icons {
     margin-left: 70px;
-}
 
-.footer-icons__item {
-    width: 44px;
-    height: 44px;
-    margin-right: 10px;
+    .footer-icons__item {
+        width: 44px;
+        height: 44px;
+        margin-right: 10px;
+    }
 }
 
 .footer-icons__list {
@@ -91,17 +91,16 @@
     background-color: rgba(255, 255, 255, 0.1);
     color: var(--primary-white-color);
 
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.footer-icons__link:hover,
-.footer-icons__link:focus {
-    background-color: var(--accent-color);
 
-}
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color);
 
-.footer-icons__list .social-icon {
-    fill: currentColor 
+    }
+
+    .social-icon {
+        fill: currentColor
+    }
 }
