--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -5,15 +5,13 @@
     margin: 0px;
     gap: 30px;
 
+    flex-basis: calc((100% - 60px)/3);
+
+    img {
+        display: block;
+    }
 }
 
-.project-images img {
-    display: block;
-}
-
-.project-images {
-    flex-basis: calc((100% - 60px)/3)
-}
 
 .img-wrapper__card {
     display: block;
@@ -28,16 +26,14 @@
 
 .img-wrapper-link {
     display: block;
-    transition-property: box-shadow;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.img-wrapper-link:hover,
-.img-wrapper-link:focus {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-        0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+    &:hover,
+    &:focus {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+            0px 4px 4px rgba(0, 0, 0, 0.06),
+            1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
 
 .project-images .img-wrapper {
@@ -78,23 +74,23 @@
     letter-spacing: 0.06em;
 
     color: var(--title-text-color);
-}
 
-.description__text {
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.8;
-    letter-spacing: 0.03em;
-    color: var(--primary-text-color);
+    .description__text {
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 1.8;
+        letter-spacing: 0.03em;
+        color: var(--primary-text-color);
 
-}
+    }
 
-.portfolio-overlay__text {
-    padding: 64px 24px;
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 28px;
-    letter-spacing: 0.03em;
+    .portfolio-overlay__text {
+        padding: 64px 24px;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 28px;
+        letter-spacing: 0.03em;
 
-    color: var(--primary-white-color);
+        color: var(--primary-white-color);
+    }
 }
