--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -15,10 +15,9 @@
 .modal-backdrop .is-hidden {
     pointer-events: none;
 
-}
-
-.modal-backdrop.is-hidden .modal {
-    transform: rotate(-180deg);
+    .modal {
+        transform: rotate(-180deg);
+    }
 }
 
 .modal {
@@ -31,21 +30,21 @@
     background-color: var(--primary-white-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 4px;
-}
 
-.modal .close-modal {
-    position: absolute;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    top: 8px;
-    right: 8px;
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background: var(--primary-white-color);
+    .close-modal {
+        position: absolute;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        top: 8px;
+        right: 8px;
+        width: 30px;
+        height: 30px;
+        border-radius: 50%;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        background: var(--primary-white-color);
 
+    }
 }
 
 .close {
@@ -57,17 +56,13 @@
     cursor: pointer;
 
     color: var(--accent-black-color);
+    transition-property: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    transition-property: color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover,
+    &:focus {
+        color: var(--accent-color)
+    }
 }
-
-.close:hover,
-.close:focus {
-    color: var(--accent-color)
-}
-
 .close-modal .close {
     fill: currentColor;
 }
@@ -105,31 +100,27 @@
     border-radius: 4px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     cursor: pointer;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-    transition-property: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    &:hover {
+        border-color: var(--accent-color);
+    }
+
+    &:focus {
+        outline: 0;
+        border-color: var(--accent-color);
+    }
+
+    .modal-form__input {
+        fill: currentColor;
+    }
 }
-
-.modal-form__input:hover {
-    border-color: var(--accent-color);
-}
-
-.modal-form__input:focus {
-    outline: 0;
-    border-color: var(--accent-color);
-}
-
-.modal-form__input {
-    fill: currentColor;
-}
-
 .modal-form__wrapper {
     position: relative;
-}
 
-.modal-form__wrapper input {
-    margin-bottom: 0;
+    input {
+        margin-bottom: 0;
+    }
 }
 
 .modal-form__icon {
@@ -138,14 +129,12 @@
     top: 50%;
     transform: translateY(-50%);
     color: var(--title-text-color);
-    transition-property: fill;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.modal-form__input:focus+.modal-form__icon,
-.modal-form__input:hover+.modal-form__icon {
-    fill: var(--accent-color);
+    &:focus+.modal-form__icon,
+    &:hover+.modal-form__icon {
+        fill: var(--accent-color);
+    }
 }
 
 .modal-form__label {
@@ -173,25 +162,22 @@
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
-    transition-property: border-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.modal-textarea::placeholder {
-    color: rgba(117, 117, 117, 0.5);
-}
+    &::placeholder {
+        color: rgba(117, 117, 117, 0.5);
+    }
 
-.modal-textarea:hover,
-.modal-textarea:focus {
-    border-color: var(--accent-color);
+    &:hover,
+    &:focus {
+        border-color: var(--accent-color);
+    }
 }
-
 .modal-textarea:focus {
     outline: 0;
 }
 
-/*галочка,умови договору*/
+/*check-line*/
 
 .check-line {
     margin-bottom: 30px;
@@ -201,42 +187,42 @@
     display: flex;
     align-items: center;
     justify-content: center;
-}
-
-.checkbox-agree__icon-wrapper {
-    width: 16px;
-    height: 15px;
-    border: 2px solid var(--title-text-color);
-    border-radius: 2px;
-    margin-right: 8px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.checkbox-agree {
     fill: transparent;
+
+    .checkbox-agree__icon-wrapper {
+        width: 16px;
+        height: 15px;
+        border: 2px solid var(--title-text-color);
+        border-radius: 2px;
+        margin-right: 8px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+    }
 }
 
-.check-line input:checked+.checkbox-agree .checkbox-agree__icon-wrapper {
-    background-color: var(--accent-color);
-    border: none;
-}
+.check-line {
 
-.check-line input:checked+.checkbox-agree {
-    fill: var(--primary-white-color);
-}
+    input:checked+.checkbox-agree .checkbox-agree__icon-wrapper {
+        background-color: var(--accent-color);
+        border: none;
+    }
 
+    input:checked+.checkbox-agree {
+        fill: var(--primary-white-color);
+    }
+}
 .text-checkbox {
     font-weight: 400;
     font-size: 14px;
     line-height: 24px;
     letter-spacing: 0.03em;
     color: var(--primary-text-color);
-}
 
-.conditions-link {
-    letter-spacing: 0.03em;
-    text-decoration-line: underline;
-    color: var(--accent-color);
+    .conditions-link {
+        letter-spacing: 0.03em;
+        text-decoration-line: underline;
+        color: var(--accent-color);
+    }
 }
