--- a/sass/components/_section-applications.scss
+++ b/sass/components/_section-applications.scss
@@ -8,34 +8,30 @@
     letter-spacing: 0.03em;
     color: var(--title-text-color);
 }
-
 .applications {
     padding-top: 0px;
     padding-right: 617px;
     padding-left: 617px;
     width: 366px;
-}
 
-.section__images {
-    display: flex;
-    margin-top: 0px;
-    margin-bottom: 0px;
-    padding-left: 0px;
+    .section__images {
+        display: flex;
+        margin-top: 0px;
+        margin-bottom: 0px;
+        padding-left: 0px;
 
-}
-
-.section__item {
-    width: calc((100% - 30px)/3);
-    margin-left: 30px;
-
-}
-
-.section__item:first-child {
-    margin-left: 0px;
+    }
 }
 
 .section__item {
     position: relative;
+    margin-left: 30px;
+
+    width: calc((100% - 30px)/3);
+
+    &:first-child {
+        margin-left: 0px;
+    }
 }
 
 .label {
@@ -48,15 +44,15 @@
     align-items: center;
     height: 70px;
     background-color: rgba(47, 48, 58, 0.8);
-}
 
-.label__text {
-    font-weight: 700;
-    font-size: 14px;
-    line-height: 16px;
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-transform: uppercase;
-    color: var(--primary-white-color);
+    .label__text {
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 16px;
+        text-align: center;
+        letter-spacing: 0.03em;
+        text-transform: uppercase;
+        color: var(--primary-white-color);
 
+    }
 }
