--- a/sass/components/_section-features.scss
+++ b/sass/components/_section-features.scss
@@ -6,6 +6,15 @@
 
 .features {
     display: flex;
+
+    .features__item {
+        margin-left: 30px;
+        flex-basis: calc((100% - 30px) / 4);
+    }
+
+    &:first-child {
+        margin-left: 0px;
+    }
 }
 
 .features__icon {
@@ -26,26 +35,14 @@
     text-transform: uppercase;
 
     color: var(--title-text-color);
+
+    .features__text {
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 1.7;
+        letter-spacing: 0.03em;
+
+        color: var(--primary-text-color)
+    }
 }
 
-.features__text {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.7;
-
-    letter-spacing: 0.03em;
-
-    color: var(--primary-text-color)
-}
-
-.features .features__item {
-    flex-basis: calc((100% - 30px) / 4);
-}
-
-.features .features__item {
-    margin-left: 30px;
-}
-
-.features .features__item:first-child {
-    margin-left: 0px;
-}
