--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -8,27 +8,24 @@
     margin-top: 0px;
     margin-bottom: 0px;
     padding-left: 0px;
-}
 
-.personal-foto__img {
-    margin-bottom: 30px;
+    .personal-foto__img {
+        margin-bottom: 30px;
+    }
 }
-
 .personal-foto__item {
 
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-
     background-color: var(--primary-white-color);
+    
+    width: calc((100% - 30px)/4);
+
+    &:nth-child(n+2) {
+        margin-left: 30px;
+    }
 }
 
-.personal-foto__item:nth-child(n+2) {
-    margin-left: 30px;
-}
-
-.personal-foto__item {
-    width: calc((100% - 30px)/4)
-}
 
 .personal-foto .social-icons {
     display: flex;
@@ -41,12 +38,10 @@
     height: 44px;
     margin-right: 10px;
 
+    &:last-child {
+        margin-right: 0px;
+    }
 }
-
-.personal-foto .social-item:last-child {
-    margin-right: 0px;
-}
-
 .personal-foto .social-link {
     width: 100%;
     height: 100%;
@@ -58,22 +53,23 @@
     color: var(--icons-grey-color);
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.personal-foto .social-link:hover,
-.personal-foto .social-link:focus {
-    background-color: var(--accent-color)
+    &:hover,
+    &:focus {
+        background-color: var(--accent-color)
+    }
+
+    &:hover,
+    &:focus {
+        color: var(--primary-white-color);
+    }
 }
 
 .personal-foto .social-icon {
     fill: currentColor
 }
 
-.personal-foto .social-link:hover,
-.personal-foto .social-link:focus {
-    color: var(--primary-white-color)
-}
 
 .member__name {
     margin-top: 0px;
@@ -82,19 +78,17 @@
     font-weight: 500;
     font-size: 16px;
     line-height: 1.1;
-
     text-align: center;
     letter-spacing: 0.03em;
-    color: var(--title-text-color)
-}
+    color: var(--title-text-color);
 
-.member__position {
-    margin-bottom: 16px;
+    .member__position {
+        margin-bottom: 16px;
 
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
-
-    text-align: center;
-    letter-spacing: 0.03em;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 19px;
+        text-align: center;
+        letter-spacing: 0.03em;
+    }
 }
