--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -18,7 +18,7 @@
     margin-bottom: 30px;
     width: 696px;
 
-    font-family: 'Roboto';
+    font-family: var(--primary-font);
     font-style: inherit;
     font-weight: 900;
     font-size: 44px;
