--- a/sass/components/_clients.scss
+++ b/sass/components/_clients.scss
@@ -24,7 +24,7 @@
     align-items: center;
     justify-content: center;
     border-radius: 4px;
-    border: 1px solid #AFB1B8;
+    border: 1px solid var(--icons-grey-color);
     background-color: var(--primary-white-color);
     color: var(--icons-grey-color);
 
