--- a/sass/components/_contacts-form.scss
+++ b/sass/components/_contacts-form.scss
@@ -1,9 +1,9 @@
 .footer-form {
     margin-left: auto;
-}
 
-.footer-form__buttons {
-    display: flex;
+    .footer-form__buttons {
+        display: flex;
+    }
 }
 
 .footer-form__input {
@@ -13,13 +13,12 @@
     border-radius: 4px;
     min-width: 358px;
     height: 50px;
-    background-color: #2F303A;
+    background-color:var(--footer-background-color);
 
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-   
+
     &:hover {
         border-color: var(--accent-color);
-
     }
 
     &:focus {
