--- a/sass/components/_gallery.scss
+++ b/sass/components/_gallery.scss
@@ -56,11 +56,11 @@
     background-color: rgba(33, 150, 243, 0.9);
     transform: translateY(100%);
     transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        color 250ms cubic-bezier(0.4, 0, 0.2, 1)
-}
+        color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-.project-images__item:hover .portfolio-overlay {
-    transform: translateY(0)
+    &:hover {
+        transform: translateY(0)
+    }
 }
 
 /*текст портфоліо*/
@@ -83,14 +83,15 @@
         color: var(--primary-text-color);
 
     }
+}
 
-    .portfolio-overlay__text {
-        padding: 64px 24px;
-        font-weight: 400;
-        font-size: 18px;
-        line-height: 28px;
-        letter-spacing: 0.03em;
+.portfolio-overlay__text {
 
-        color: var(--primary-white-color);
-    }
+    padding: 64px 24px;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 28px;
+    letter-spacing: 0.03em;
+
+    color: var(--primary-white-color);
 }
