--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,3 +1,10 @@
+
+body {
+    background-color: var(--primary-white-color);
+    color: var(--primary-text-color);
+    font-family: var(--primary-font);
+}
+
 .page-header {
     margin: 0px;
     border-bottom: 1px solid var(--border-line-color);
@@ -8,7 +15,7 @@
     }
 }
 .logo {
-    font-family: 'Raleway';
+    font-family: var(--secondary-font);
     font-style: normal;
     font-weight: 700;
     font-size: 26px;
